--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,12 @@
     <ul class="navbar-nav mr-auto">
       {% if current_user.is_authenticated %}
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('add_item') }}">Add Item</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('users') }}">Users</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                 </li>
                 {% else %}
