--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,19 @@
 {% extends 'base.html' %}
+
 {% block content %}
-Hello
+<div class="row">
+{% for item in items %}
+    <div class="col=sm-4">
+        <div class="card" style="width:15rem; height:30rem;">
+            <img class="card-img-top" src="{{ url_for('static', filename=item.img_url) }}" alt="Card Image Top">
+            <div class="card-body">
+                <h5 class="card-title">{{ item.name }}</h5>
+                <p class="card-text">{{ item.description }}</p>
+                <p class="card-text">£{{ item.price }}</p>
+                <a class="btn btn-primary" href="{{ url_for('to_cart', item_name=item.name) }}">Add to Cart</a>
+            </div>
+        </div>
+    </div>
+{% endfor %}
+</div>
 {% endblock %}
