--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@
                     <a class="nav-link" href="{{ url_for('login') }}">Login</a>
                 </li>
                 {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('cart') }}">My Cart</a>
+                </li>
     </ul>
   </div>
 </nav>
