Total price on My Cart screen

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -28,5 +28,11 @@
         {% endif %}
 
     </table>
+    {% if cart %}
+    <p>Price: £{{ price }}</p>
+
+
+    <a class="btn btn-primary" href="{{ url_for('checkout') }}">Proceed to Checkout</a>
+    {% endif %}
 </div>
 {% endblock %}
